Fix list view clue number alignment

--- a/src/components/ListView/css/listView.css
+++ b/src/components/ListView/css/listView.css
@@ -46,7 +46,6 @@
 
 .list-view--list--clue--number {
   font-weight: 400;
-  line-height: 19px;
   font-weight: bold;
 }
 
